--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
     <!-- Adding a google font -->
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@600&display=swap" rel="stylesheet">
 
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@600&family=Roboto+Serif:wght@506&display=swap" rel="stylesheet">
+
     <!-- Adding bootstrap css style -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
@@ -19,11 +21,12 @@
     <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 <body>
-    <div class="container h-100">
-        <div class="row align-items-center">
+    <div class="container d-flex align-items-center h-100">
+        <div class="row">
             <header class="text-center col-12">
-                <h1 class="text-uppercase"><strong>The Big Startup Of The year</strong></h1>
+                <h1 class="text-uppercase text-center"><strong>The Big Startup Event Of The year</strong></h1>
             </header>
+            <div class="buffer col-12"></div>
             <section class="text-center col-12">
                 <hr>
                 <button class="btn btn-primary btn-xl">Find Out More</button>
