Adding a new page with some flex box practices

--- a/index.html
+++ b/index.html
@@ -28,7 +28,9 @@
             </header>
             <div class="buffer col-12"></div>
             <section class="text-center col-12">
-                <button class="btn btn-primary btn-xl">Find Out More</button>
+                <a href="flex.html">
+                    <button class="btn btn-primary btn-xl">Find Out More</button>
+                </a>
             </section>
         </div>
     </div>
