--- a/flex.html
+++ b/flex.html
@@ -16,13 +16,28 @@
             flex: 1;
             display: flex;
         }
+        .flex-container .one{
+            flex: 2;
+        }
         .one .child {
             background: yellow;
             border: 2px solid rgb(19, 19, 14);
             height: 50px;
             flex: 1;
         }
-
+        .shrink-container {
+            display: flex;
+        }
+        .shrink-container div {
+            height: 100px;
+            width: 300px;
+            border: 4px solid red;
+            background: purple;
+            flex: 1 1 auto;
+        }
+        .shrink-container .five{
+            flex: 1 0 auto;
+        }
     </style>
 </head>
 <body>
@@ -34,6 +49,12 @@
         <div class="two"></div>
         <div class="three"></div>
         <div class="four"></div>
+    </div>
+    <br>
+    <div class="shrink-container">
+        <div class="five"></div>
+        <div class="six"></div>
+        <div class="seven"></div>
     </div>
 </body>
 </html>
